# adventOfCode2020

./: CMakeLists.txt
src/: CMakeLists.txt
src/day01/: CMakeLists.txt  day01.s  day01_part1.s  day01_part2.s
src/day02/: CMakeLists.txt  day02.s  day02_part1.s  day02_part2.s
src/day03/: CMakeLists.txt  day03_part1.s  day03_part2.s  input_test.txt
src/day04/: CMakeLists.txt  day04_part1.s  day04_part2.s
src/day05/: CMakeLists.txt  day05_part1.s  day05_part2.s
src/day06/: CMakeLists.txt  day06_part1.s  day06_part2.s  macros.s
src/day07/: CMakeLists.txt  day07_part1.s
src/day08/: CMakeLists.txt  day08_part1.s  day08_part2.s  macros.s
src/day09/: CMakeLists.txt  day09_part1.s
src/day11/: CMakeLists.txt  day11_part1.s  day11_part2.s
src/practice/: CMakeLists.txt
src/practice/2019_day01/: CMakeLists.txt
src/practice/practice-files-and-printing/: CMakeLists.txt  practice_files_and_printing.s
src/practice/practice-floating-point/: CMakeLists.txt  practice_floating_point.s
src/practice/practice01/: CMakeLists.txt  practice01.s
src/utils/: CMakeLists.txt  common.s  file.s  methods.s  print.s  string.s  syscalls.s
